improve handling clicking on many 'modify' buttons

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
-
-
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
     <meta name="description" content="Geocaching portal">
@@ -10,7 +7,7 @@
     <meta name="author" content="Elżbieta Łukaszewicz">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Geocaching is FUN!</title>
+    <title>Geocaching</title>
     <link href="./css/style.css" rel="stylesheet" type="text/css">
 </head>
 
